--- a/.eslintrc
+++ b/.eslintrc
@@ -55,7 +55,7 @@
     "max-params": 0,
     "max-statements": 0,
     "new-cap": [2, { "newIsCap": true, "capIsNew": false }],
-    "newline-after-var": [2, "always"],
+    "newline-after-var": [2, "never"],
     "new-parens": 2,
     "no-alert": 0,
     "no-array-constructor": 2,
@@ -151,16 +151,14 @@
     "no-with": 2,
     "one-var": 0,
     "operator-assignment": 0,
-    "operator-linebreak": [2, "after"],
     "padded-blocks": 0,
     "quote-props": 0,
     "quotes": [2, "single", "avoid-escape"],
     "radix": 2,
-    "semi": [2, "always"],
+    "semi": [2, "never"],
     "semi-spacing": 0,
     "sort-vars": 0,
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, {"anonymous": "always", "named": "never"}],
     "space-in-brackets": 0,
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
